# books-api

./: Dockerfile  Jenkinsfile  README.md  alembic.ini  postgresql.values.yaml  pyproject.toml
alembic/: env.py
books_api/: main.py  services.py  settings.py  types.py
books_api/auth/: dependencies.py  schemes.py
books_api/persist/: dependencies.py  models.py  repository.py  utils.py
terraform/: provider.tf  service.tf  storage.tf
