[tool.poetry]
name = "books-api"
version = "0.1.0"
description = ""
authors = ["Tyler Evans <tyler@poorlythoughtout.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
uvicorn = "^0.33.0"
fastapi = {version = "^0.115.6", extras = ["standard"]}
pyjwt = "^2.10.1"
cryptography = "^44.0.0"


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
